// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email authenticator verification when email magic link = undefined renders correct form renders the initial form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-email MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-email"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-email"
                    >
                      Email Authentication
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <form
                  class="o-form MuiBox-root emotion-10"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <div
                        class="identifier-container MuiBox-root emotion-13"
                      >
                        <div
                          class="MuiBox-root emotion-14"
                        >
                          <span
                            class="MuiBox-root emotion-15"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-16"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </span>
                          <span
                            aria-label="firstname.lastname@example.com"
                            class="identifier no-translate MuiBox-root emotion-17"
                            data-se="identifier"
                            title="firstname.lastname@example.com"
                          >
                            firstname.lastname@example.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      />
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-21"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-22"
                            data-se="o-form-head"
                            id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_3_1"
                            tabindex="-1"
                          >
                            Verify with your email
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-21"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-25"
                            data-se="o-form-explain"
                            id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_4_1"
                          >
                            We sent an email to 
                            <span
                              class="strong no-translate"
                            >
                              f****************e@example.com
                            </span>
                            . Click the verification link in your email to continue or enter the code below.
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-27"
                          tabindex="0"
                          type="button"
                        >
                          Enter a verification code instead
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-29"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form renders the initial form with resend alert box 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-email MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-email"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-email"
                    >
                      Email Authentication
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <form
                  class="o-form MuiBox-root emotion-10"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <div
                        class="identifier-container MuiBox-root emotion-13"
                      >
                        <div
                          class="MuiBox-root emotion-14"
                        >
                          <span
                            class="MuiBox-root emotion-15"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-16"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </span>
                          <span
                            aria-label="firstname.lastname@example.com"
                            class="identifier no-translate MuiBox-root emotion-17"
                            data-se="identifier"
                            title="firstname.lastname@example.com"
                          >
                            firstname.lastname@example.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-12"
                        >
                          <div
                            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxWarning MuiAlert-infobox emotion-21"
                            role="alert"
                          >
                            <div
                              class="MuiAlert-icon emotion-22"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-23"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M9.342 2.918c1.123-2.144 4.192-2.144 5.315 0l7.695 14.69C23.398 19.605 21.95 22 19.695 22H4.305c-2.255 0-3.703-2.395-2.657-4.392l7.694-14.69ZM12 14a1 1 0 0 1-1-1V8h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiAlert-message emotion-24"
                            >
                              <div
                                class="MuiBox-root emotion-25"
                              >
                                Haven't received an email?
                              </div>
                              <a
                                class="MuiTypography-root MuiTypography-monochrome MuiLink-root MuiLink-underlineAlways emotion-26"
                                href="javascript:void(0);"
                              >
                                Send again
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-28"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-29"
                            data-se="o-form-head"
                            id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_3_1"
                            tabindex="-1"
                          >
                            Verify with your email
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-28"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-32"
                            data-se="o-form-explain"
                            id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_4_1"
                          >
                            We sent an email to 
                            <span
                              class="strong no-translate"
                            >
                              f****************e@example.com
                            </span>
                            . Click the verification link in your email to continue or enter the code below.
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth Mui-focusVisible MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-34"
                          tabindex="0"
                          type="button"
                        >
                          Enter a verification code instead
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-36"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form renders the otp challenge form 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-email MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-email"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-email"
                    >
                      Email Authentication
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <form
                  class="o-form MuiBox-root emotion-10"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <div
                        class="identifier-container MuiBox-root emotion-13"
                      >
                        <div
                          class="MuiBox-root emotion-14"
                        >
                          <span
                            class="MuiBox-root emotion-15"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-16"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </span>
                          <span
                            aria-label="firstname.lastname@example.com"
                            class="identifier no-translate MuiBox-root emotion-17"
                            data-se="identifier"
                            title="firstname.lastname@example.com"
                          >
                            firstname.lastname@example.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      />
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-21"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-22"
                            data-se="o-form-head"
                            id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_7_2"
                            tabindex="-1"
                          >
                            Verify with your email
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-21"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-25"
                            data-se="o-form-explain"
                            id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_8_2"
                          >
                            We sent an email to 
                            <span
                              class="strong no-translate"
                            >
                              f****************e@example.com
                            </span>
                            . Click the verification link in your email to continue or enter the code below.
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-28"
                            data-shrink="false"
                            for="credentials.passcode"
                          >
                            Enter Code
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused emotion-29"
                            dir="ltr"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="off"
                              class="MuiInputBase-input emotion-30"
                              data-se="credentials.passcode"
                              id="credentials.passcode"
                              inputmode="numeric"
                              name="credentials.passcode"
                              type="text"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-32"
                          data-type="save"
                          tabindex="0"
                          type="submit"
                        >
                          Verify
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-34"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form renders the otp challenge form 2`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-email MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-email"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-email"
                    >
                      Email Authentication
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <form
                  class="o-form MuiBox-root emotion-10"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-12"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-13"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-14"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-15"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <div
                        class="identifier-container MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <span
                            class="MuiBox-root emotion-20"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-21"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </span>
                          <span
                            aria-label="testUser@okta.com"
                            class="identifier no-translate MuiBox-root emotion-22"
                            data-se="identifier"
                            title="testUser@okta.com"
                          >
                            testUser@okta.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-17"
                      />
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <div
                          class="MuiBox-root emotion-26"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-27"
                            data-se="o-form-head"
                            id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eaexdyjzXZ3iWikza0g3_7_2"
                            tabindex="-1"
                          >
                            Verify with your email
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <div
                          class="MuiBox-root emotion-26"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-30"
                            data-se="o-form-explain"
                            id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>t***t@idxcom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eaexdyjzXZ3iWikza0g3_8_2"
                          >
                            We sent an email to 
                            <span
                              class="strong no-translate"
                            >
                              t***t@idx.com
                            </span>
                            . Click the verification link in your email to continue or enter the code below.
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-33"
                            data-shrink="false"
                            for="credentials.passcode"
                          >
                            Enter Code
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-34"
                            dir="ltr"
                          >
                            <input
                              aria-describedby=" credentials.passcode-error  "
                              aria-invalid="true"
                              autocomplete="off"
                              class="MuiInputBase-input emotion-35"
                              data-se="credentials.passcode"
                              id="credentials.passcode"
                              inputmode="numeric"
                              name="credentials.passcode"
                              type="text"
                            />
                          </div>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            <p
                              class="MuiFormHelperText-root Mui-error emotion-37"
                              data-se="credentials.passcode-error"
                              id="credentials.passcode-error"
                              role="alert"
                            >
                              Invalid code. Try again.
                            </p>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-39"
                          data-type="save"
                          tabindex="0"
                          type="submit"
                        >
                          Verify
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-41"
                        data-se="switchAuthenticator"
                        role="link"
                        type="button"
                      >
                        Verify with something else
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-41"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form should display reminder prompt, then global error after invalid entry and finally display reminder again with global error 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-email MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-email"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-email"
                    >
                      Email Authentication
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <form
                  class="o-form MuiBox-root emotion-10"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox emotion-12"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-13"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-14"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-15"
                      >
                        We found some errors. Please review the form and make corrections.
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-16"
                  >
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <div
                        class="identifier-container MuiBox-root emotion-18"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <span
                            class="MuiBox-root emotion-20"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-21"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </span>
                          <span
                            aria-label="testUser@okta.com"
                            class="identifier no-translate MuiBox-root emotion-22"
                            data-se="identifier"
                            title="testUser@okta.com"
                          >
                            testUser@okta.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-16"
                    >
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <div
                          class="MuiBox-root emotion-17"
                        >
                          <div
                            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxWarning MuiAlert-infobox emotion-26"
                            role="alert"
                          >
                            <div
                              class="MuiAlert-icon emotion-27"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-14"
                                fill="none"
                                focusable="false"
                                viewBox="0 0 24 24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M9.342 2.918c1.123-2.144 4.192-2.144 5.315 0l7.695 14.69C23.398 19.605 21.95 22 19.695 22H4.305c-2.255 0-3.703-2.395-2.657-4.392l7.694-14.69ZM12 14a1 1 0 0 1-1-1V8h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                                  fill="currentColor"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiAlert-message emotion-15"
                            >
                              <div
                                class="MuiBox-root emotion-30"
                              >
                                Haven't received an email?
                              </div>
                              <a
                                class="MuiTypography-root MuiTypography-monochrome MuiLink-root MuiLink-underlineAlways emotion-31"
                                href="javascript:void(0);"
                              >
                                Send again
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <div
                          class="MuiBox-root emotion-33"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-34"
                            data-se="o-form-head"
                            id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eaexdyjzXZ3iWikza0g3_7_2"
                            tabindex="-1"
                          >
                            Verify with your email
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <div
                          class="MuiBox-root emotion-33"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-37"
                            data-se="o-form-explain"
                            id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>t***t@idxcom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eaexdyjzXZ3iWikza0g3_8_2"
                          >
                            We sent an email to 
                            <span
                              class="strong no-translate"
                            >
                              t***t@idx.com
                            </span>
                            . Click the verification link in your email to continue or enter the code below.
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-40"
                            data-shrink="false"
                            for="credentials.passcode"
                          >
                            Enter Code
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth Mui-focused emotion-41"
                            dir="ltr"
                          >
                            <input
                              aria-describedby=" credentials.passcode-error  "
                              aria-invalid="true"
                              autocomplete="off"
                              class="MuiInputBase-input emotion-42"
                              data-se="credentials.passcode"
                              id="credentials.passcode"
                              inputmode="numeric"
                              name="credentials.passcode"
                              type="text"
                            />
                          </div>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            <p
                              class="MuiFormHelperText-root Mui-error emotion-44"
                              data-se="credentials.passcode-error"
                              id="credentials.passcode-error"
                              role="alert"
                            >
                              Invalid code. Try again.
                            </p>
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-17"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-46"
                          data-type="save"
                          tabindex="0"
                          type="submit"
                        >
                          Verify
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-48"
                        data-se="switchAuthenticator"
                        role="link"
                        type="button"
                      >
                        Verify with something else
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-17"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-48"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined renders correct form should render session expired terminal view when polling results in expired session 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                        data-se="message"
                      >
                        <div
                          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-infoboxError MuiAlert-infobox infobox-error emotion-13"
                          data-se="callout"
                          role="alert"
                        >
                          <div
                            class="MuiAlert-icon emotion-14"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-15"
                              fill="none"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </div>
                          <div
                            class="MuiAlert-message emotion-16"
                          >
                            You have been logged out due to inactivity. Refresh or return to the sign in screen.
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-18"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`Email authenticator verification when email magic link = undefined should have autocomplete attribute on otp input element when in ios browser 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="auth-container main-container MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-6"
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                />
                <div
                  aria-hidden="true"
                  class="mfa-okta-email MuiBox-root emotion-8"
                  data-se="factor-beacon"
                >
                  <svg
                    aria-labelledby="mfa-okta-email"
                    fill="none"
                    height="48"
                    role="img"
                    viewBox="0 0 48 48"
                    width="48"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="mfa-okta-email"
                    >
                      Email Authentication
                    </title>
                    <circle
                      class="siwFillBg"
                      cx="24"
                      cy="24"
                      fill="#F5F5F6"
                      r="24"
                    />
                    <path
                      class="siwFillSecondary"
                      d="M32 18v1h5.3L32 24.29v1.42l6-6.01v12.8a1.5 1.5 0 0 1-1.5 1.5h-17a1.5 1.5 0 0 1-1.5-1.5V31h-1v1.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V18h-7Z"
                      fill="#A7B5EC"
                    />
                    <path
                      class="siwFillPrimaryDark"
                      d="M9 13v14.5a2.5 2.5 0 0 0 2.5 2.5h17a2.5 2.5 0 0 0 2.5-2.5V13H9Zm20.293 1-8.81 8.81L10.794 14h18.499ZM28.5 29h-17a1.5 1.5 0 0 1-1.5-1.5V14.63l10.517 9.56L30 14.707V27.5a1.5 1.5 0 0 1-1.5 1.5Z"
                      fill="#00297A"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-9"
              >
                <form
                  class="o-form MuiBox-root emotion-10"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <div
                        class="identifier-container MuiBox-root emotion-13"
                      >
                        <div
                          class="MuiBox-root emotion-14"
                        >
                          <span
                            class="MuiBox-root emotion-15"
                          >
                            <svg
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-16"
                              fill="none"
                              focusable="false"
                              role="img"
                              viewBox="0 0 16 16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                              <title>
                                User
                              </title>
                            </svg>
                          </span>
                          <span
                            aria-label="firstname.lastname@example.com"
                            class="identifier no-translate MuiBox-root emotion-17"
                            data-se="identifier"
                            title="firstname.lastname@example.com"
                          >
                            firstname.lastname@example.com
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      />
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-21"
                        >
                          <h2
                            class="MuiTypography-root MuiTypography-h4 emotion-22"
                            data-se="o-form-head"
                            id="challenge-authenticator_Title_Verify_with_your_email_okta_email_eae1egri5eK5zce0V1d7_7_2"
                            tabindex="-1"
                          >
                            Verify with your email
                          </h2>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-21"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-25"
                            data-se="o-form-explain"
                            id="challenge-authenticator_Description_We_sent_an_email_to_<span_class=strong_no-translate>f****************e@examplecom</span>_Click_the_verification_link_in_your_email_to_continue_or_enter_the_code_below_okta_email_eae1egri5eK5zce0V1d7_8_2"
                          >
                            We sent an email to 
                            <span
                              class="strong no-translate"
                            >
                              f****************e@example.com
                            </span>
                            . Click the verification link in your email to continue or enter the code below.
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <div
                          class="MuiBox-root emotion-2"
                        >
                          <label
                            class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-28"
                            data-shrink="false"
                            for="credentials.passcode"
                          >
                            Enter Code
                          </label>
                          <div
                            class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused emotion-29"
                            dir="ltr"
                          >
                            <input
                              aria-invalid="false"
                              autocomplete="one-time-code"
                              class="MuiInputBase-input emotion-30"
                              data-se="credentials.passcode"
                              id="credentials.passcode"
                              inputmode="numeric"
                              name="credentials.passcode"
                              type="text"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-32"
                          data-type="save"
                          tabindex="0"
                          type="submit"
                        >
                          Verify
                        </button>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-12"
                    >
                      <button
                        class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-34"
                        data-se="cancel"
                        role="link"
                        type="button"
                      >
                        Back to sign in
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
